Syntactic/miniCSyntactic.output
State 70 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 @1: /* empty */

    2 program: @1 ID LPAR RPAR LKEY declarations statement_list RKEY

    3 declarations: /* empty */

    4 @2: /* empty */

    5 declarations: declarations VAR @2 identifier_list SEMICOLON

    6 @3: /* empty */

    7 declarations: declarations CONST @3 identifier_list SEMICOLON

    8 identifier_list: identifier
    9                | identifier_list COMMA identifier

   10 identifier: ID
   11           | ID EQUALS expression

   12 statement_list: /* empty */
   13               | statement_list statement

   14 statement: ID EQUALS expression SEMICOLON
   15          | LKEY statement_list RKEY
   16          | IF LPAR expression RPAR statement ELSE statement
   17          | IF LPAR expression RPAR statement
   18          | WHILE LPAR expression RPAR statement
   19          | PRINT LPAR print_list RPAR SEMICOLON
   20          | READ LPAR read_list RPAR SEMICOLON

   21 print_list: print_item
   22           | print_list COMMA print_item

   23 print_item: expression
   24           | STRING

   25 read_list: ID
   26          | read_list COMMA ID

   27 expression: expression PLUSOP expression
   28           | expression MINUSOP expression
   29           | expression TIMES expression
   30           | expression DIV expression
   31           | MINUSOP expression
   32           | LPAR expression RPAR
   33           | ID
   34           | NUMBER


Terminals, with rules where they appear

$end (0) 0
error (256)
VAR (258) 5
CONST (259) 7
IF (260) 16 17
ELSE (261) 16
WHILE (262) 18
PRINT (263) 19
READ (264) 20
SEMICOLON (265) 5 7 14 19 20
COMMA (266) 9 22 26
PLUSOP (267) 27
MINUSOP (268) 28 31
TIMES (269) 29
DIV (270) 30
EQUALS (271) 11 14
LPAR (272) 2 16 17 18 19 20 32
RPAR (273) 2 16 17 18 19 20 32
LKEY (274) 2 15
RKEY (275) 2 15
STRING (276) 24
ID (277) 2 10 11 14 25 26 33
NUMBER (278) 34
UMINUS (279)


Nonterminals, with rules where they appear

$accept (25)
    on left: 0
program (26)
    on left: 2, on right: 0
@1 (27)
    on left: 1, on right: 2
declarations (28)
    on left: 3 5 7, on right: 2 5 7
@2 (29)
    on left: 4, on right: 5
@3 (30)
    on left: 6, on right: 7
identifier_list (31)
    on left: 8 9, on right: 5 7 9
identifier (32)
    on left: 10 11, on right: 8 9
statement_list (33)
    on left: 12 13, on right: 2 13 15
statement (34)
    on left: 14 15 16 17 18 19 20, on right: 13 16 17 18
print_list (35)
    on left: 21 22, on right: 19 22
print_item (36)
    on left: 23 24, on right: 21 22
read_list (37)
    on left: 25 26, on right: 20 26
expression (38)
    on left: 27 28 29 30 31 32 33 34, on right: 11 14 16 17 18 23 27
    28 29 30 31 32


state 0

    0 $accept: . program $end

    $default  reduce using rule 1 (@1)

    program  go to state 1
    @1       go to state 2


state 1

    0 $accept: program . $end

    $end  shift, and go to state 3


state 2

    2 program: @1 . ID LPAR RPAR LKEY declarations statement_list RKEY

    ID  shift, and go to state 4


state 3

    0 $accept: program $end .

    $default  accept


state 4

    2 program: @1 ID . LPAR RPAR LKEY declarations statement_list RKEY

    LPAR  shift, and go to state 5


state 5

    2 program: @1 ID LPAR . RPAR LKEY declarations statement_list RKEY

    RPAR  shift, and go to state 6


state 6

    2 program: @1 ID LPAR RPAR . LKEY declarations statement_list RKEY

    LKEY  shift, and go to state 7


state 7

    2 program: @1 ID LPAR RPAR LKEY . declarations statement_list RKEY

    $default  reduce using rule 3 (declarations)

    declarations  go to state 8


state 8

    2 program: @1 ID LPAR RPAR LKEY declarations . statement_list RKEY
    5 declarations: declarations . VAR @2 identifier_list SEMICOLON
    7             | declarations . CONST @3 identifier_list SEMICOLON

    VAR    shift, and go to state 9
    CONST  shift, and go to state 10

    $default  reduce using rule 12 (statement_list)

    statement_list  go to state 11


state 9

    5 declarations: declarations VAR . @2 identifier_list SEMICOLON

    $default  reduce using rule 4 (@2)

    @2  go to state 12


state 10

    7 declarations: declarations CONST . @3 identifier_list SEMICOLON

    $default  reduce using rule 6 (@3)

    @3  go to state 13


state 11

    2 program: @1 ID LPAR RPAR LKEY declarations statement_list . RKEY
   13 statement_list: statement_list . statement

    IF     shift, and go to state 14
    WHILE  shift, and go to state 15
    PRINT  shift, and go to state 16
    READ   shift, and go to state 17
    LKEY   shift, and go to state 18
    RKEY   shift, and go to state 19
    ID     shift, and go to state 20

    statement  go to state 21


state 12

    5 declarations: declarations VAR @2 . identifier_list SEMICOLON

    ID  shift, and go to state 22

    identifier_list  go to state 23
    identifier       go to state 24


state 13

    7 declarations: declarations CONST @3 . identifier_list SEMICOLON

    ID  shift, and go to state 22

    identifier_list  go to state 25
    identifier       go to state 24


state 14

   16 statement: IF . LPAR expression RPAR statement ELSE statement
   17          | IF . LPAR expression RPAR statement

    LPAR  shift, and go to state 26


state 15

   18 statement: WHILE . LPAR expression RPAR statement

    LPAR  shift, and go to state 27


state 16

   19 statement: PRINT . LPAR print_list RPAR SEMICOLON

    LPAR  shift, and go to state 28


state 17

   20 statement: READ . LPAR read_list RPAR SEMICOLON

    LPAR  shift, and go to state 29


state 18

   15 statement: LKEY . statement_list RKEY

    $default  reduce using rule 12 (statement_list)

    statement_list  go to state 30


state 19

    2 program: @1 ID LPAR RPAR LKEY declarations statement_list RKEY .

    $default  reduce using rule 2 (program)


state 20

   14 statement: ID . EQUALS expression SEMICOLON

    EQUALS  shift, and go to state 31


state 21

   13 statement_list: statement_list statement .

    $default  reduce using rule 13 (statement_list)


state 22

   10 identifier: ID .
   11           | ID . EQUALS expression

    EQUALS  shift, and go to state 32

    $default  reduce using rule 10 (identifier)


state 23

    5 declarations: declarations VAR @2 identifier_list . SEMICOLON
    9 identifier_list: identifier_list . COMMA identifier

    SEMICOLON  shift, and go to state 33
    COMMA      shift, and go to state 34


state 24

    8 identifier_list: identifier .

    $default  reduce using rule 8 (identifier_list)


state 25

    7 declarations: declarations CONST @3 identifier_list . SEMICOLON
    9 identifier_list: identifier_list . COMMA identifier

    SEMICOLON  shift, and go to state 35
    COMMA      shift, and go to state 34


state 26

   16 statement: IF LPAR . expression RPAR statement ELSE statement
   17          | IF LPAR . expression RPAR statement

    MINUSOP  shift, and go to state 36
    LPAR     shift, and go to state 37
    ID       shift, and go to state 38
    NUMBER   shift, and go to state 39

    expression  go to state 40


state 27

   18 statement: WHILE LPAR . expression RPAR statement

    MINUSOP  shift, and go to state 36
    LPAR     shift, and go to state 37
    ID       shift, and go to state 38
    NUMBER   shift, and go to state 39

    expression  go to state 41


state 28

   19 statement: PRINT LPAR . print_list RPAR SEMICOLON

    MINUSOP  shift, and go to state 36
    LPAR     shift, and go to state 37
    STRING   shift, and go to state 42
    ID       shift, and go to state 38
    NUMBER   shift, and go to state 39

    print_list  go to state 43
    print_item  go to state 44
    expression  go to state 45


state 29

   20 statement: READ LPAR . read_list RPAR SEMICOLON

    ID  shift, and go to state 46

    read_list  go to state 47


state 30

   13 statement_list: statement_list . statement
   15 statement: LKEY statement_list . RKEY

    IF     shift, and go to state 14
    WHILE  shift, and go to state 15
    PRINT  shift, and go to state 16
    READ   shift, and go to state 17
    LKEY   shift, and go to state 18
    RKEY   shift, and go to state 48
    ID     shift, and go to state 20

    statement  go to state 21


state 31

   14 statement: ID EQUALS . expression SEMICOLON

    MINUSOP  shift, and go to state 36
    LPAR     shift, and go to state 37
    ID       shift, and go to state 38
    NUMBER   shift, and go to state 39

    expression  go to state 49


state 32

   11 identifier: ID EQUALS . expression

    MINUSOP  shift, and go to state 36
    LPAR     shift, and go to state 37
    ID       shift, and go to state 38
    NUMBER   shift, and go to state 39

    expression  go to state 50


state 33

    5 declarations: declarations VAR @2 identifier_list SEMICOLON .

    $default  reduce using rule 5 (declarations)


state 34

    9 identifier_list: identifier_list COMMA . identifier

    ID  shift, and go to state 22

    identifier  go to state 51


state 35

    7 declarations: declarations CONST @3 identifier_list SEMICOLON .

    $default  reduce using rule 7 (declarations)


state 36

   31 expression: MINUSOP . expression

    MINUSOP  shift, and go to state 36
    LPAR     shift, and go to state 37
    ID       shift, and go to state 38
    NUMBER   shift, and go to state 39

    expression  go to state 52


state 37

   32 expression: LPAR . expression RPAR

    MINUSOP  shift, and go to state 36
    LPAR     shift, and go to state 37
    ID       shift, and go to state 38
    NUMBER   shift, and go to state 39

    expression  go to state 53


state 38

   33 expression: ID .

    $default  reduce using rule 33 (expression)


state 39

   34 expression: NUMBER .

    $default  reduce using rule 34 (expression)


state 40

   16 statement: IF LPAR expression . RPAR statement ELSE statement
   17          | IF LPAR expression . RPAR statement
   27 expression: expression . PLUSOP expression
   28           | expression . MINUSOP expression
   29           | expression . TIMES expression
   30           | expression . DIV expression

    PLUSOP   shift, and go to state 54
    MINUSOP  shift, and go to state 55
    TIMES    shift, and go to state 56
    DIV      shift, and go to state 57
    RPAR     shift, and go to state 58


state 41

   18 statement: WHILE LPAR expression . RPAR statement
   27 expression: expression . PLUSOP expression
   28           | expression . MINUSOP expression
   29           | expression . TIMES expression
   30           | expression . DIV expression

    PLUSOP   shift, and go to state 54
    MINUSOP  shift, and go to state 55
    TIMES    shift, and go to state 56
    DIV      shift, and go to state 57
    RPAR     shift, and go to state 59


state 42

   24 print_item: STRING .

    $default  reduce using rule 24 (print_item)


state 43

   19 statement: PRINT LPAR print_list . RPAR SEMICOLON
   22 print_list: print_list . COMMA print_item

    COMMA  shift, and go to state 60
    RPAR   shift, and go to state 61


state 44

   21 print_list: print_item .

    $default  reduce using rule 21 (print_list)


state 45

   23 print_item: expression .
   27 expression: expression . PLUSOP expression
   28           | expression . MINUSOP expression
   29           | expression . TIMES expression
   30           | expression . DIV expression

    PLUSOP   shift, and go to state 54
    MINUSOP  shift, and go to state 55
    TIMES    shift, and go to state 56
    DIV      shift, and go to state 57

    $default  reduce using rule 23 (print_item)


state 46

   25 read_list: ID .

    $default  reduce using rule 25 (read_list)


state 47

   20 statement: READ LPAR read_list . RPAR SEMICOLON
   26 read_list: read_list . COMMA ID

    COMMA  shift, and go to state 62
    RPAR   shift, and go to state 63


state 48

   15 statement: LKEY statement_list RKEY .

    $default  reduce using rule 15 (statement)


state 49

   14 statement: ID EQUALS expression . SEMICOLON
   27 expression: expression . PLUSOP expression
   28           | expression . MINUSOP expression
   29           | expression . TIMES expression
   30           | expression . DIV expression

    SEMICOLON  shift, and go to state 64
    PLUSOP     shift, and go to state 54
    MINUSOP    shift, and go to state 55
    TIMES      shift, and go to state 56
    DIV        shift, and go to state 57


state 50

   11 identifier: ID EQUALS expression .
   27 expression: expression . PLUSOP expression
   28           | expression . MINUSOP expression
   29           | expression . TIMES expression
   30           | expression . DIV expression

    PLUSOP   shift, and go to state 54
    MINUSOP  shift, and go to state 55
    TIMES    shift, and go to state 56
    DIV      shift, and go to state 57

    $default  reduce using rule 11 (identifier)


state 51

    9 identifier_list: identifier_list COMMA identifier .

    $default  reduce using rule 9 (identifier_list)


state 52

   27 expression: expression . PLUSOP expression
   28           | expression . MINUSOP expression
   29           | expression . TIMES expression
   30           | expression . DIV expression
   31           | MINUSOP expression .

    $default  reduce using rule 31 (expression)


state 53

   27 expression: expression . PLUSOP expression
   28           | expression . MINUSOP expression
   29           | expression . TIMES expression
   30           | expression . DIV expression
   32           | LPAR expression . RPAR

    PLUSOP   shift, and go to state 54
    MINUSOP  shift, and go to state 55
    TIMES    shift, and go to state 56
    DIV      shift, and go to state 57
    RPAR     shift, and go to state 65


state 54

   27 expression: expression PLUSOP . expression

    MINUSOP  shift, and go to state 36
    LPAR     shift, and go to state 37
    ID       shift, and go to state 38
    NUMBER   shift, and go to state 39

    expression  go to state 66


state 55

   28 expression: expression MINUSOP . expression

    MINUSOP  shift, and go to state 36
    LPAR     shift, and go to state 37
    ID       shift, and go to state 38
    NUMBER   shift, and go to state 39

    expression  go to state 67


state 56

   29 expression: expression TIMES . expression

    MINUSOP  shift, and go to state 36
    LPAR     shift, and go to state 37
    ID       shift, and go to state 38
    NUMBER   shift, and go to state 39

    expression  go to state 68


state 57

   30 expression: expression DIV . expression

    MINUSOP  shift, and go to state 36
    LPAR     shift, and go to state 37
    ID       shift, and go to state 38
    NUMBER   shift, and go to state 39

    expression  go to state 69


state 58

   16 statement: IF LPAR expression RPAR . statement ELSE statement
   17          | IF LPAR expression RPAR . statement

    IF     shift, and go to state 14
    WHILE  shift, and go to state 15
    PRINT  shift, and go to state 16
    READ   shift, and go to state 17
    LKEY   shift, and go to state 18
    ID     shift, and go to state 20

    statement  go to state 70


state 59

   18 statement: WHILE LPAR expression RPAR . statement

    IF     shift, and go to state 14
    WHILE  shift, and go to state 15
    PRINT  shift, and go to state 16
    READ   shift, and go to state 17
    LKEY   shift, and go to state 18
    ID     shift, and go to state 20

    statement  go to state 71


state 60

   22 print_list: print_list COMMA . print_item

    MINUSOP  shift, and go to state 36
    LPAR     shift, and go to state 37
    STRING   shift, and go to state 42
    ID       shift, and go to state 38
    NUMBER   shift, and go to state 39

    print_item  go to state 72
    expression  go to state 45


state 61

   19 statement: PRINT LPAR print_list RPAR . SEMICOLON

    SEMICOLON  shift, and go to state 73


state 62

   26 read_list: read_list COMMA . ID

    ID  shift, and go to state 74


state 63

   20 statement: READ LPAR read_list RPAR . SEMICOLON

    SEMICOLON  shift, and go to state 75


state 64

   14 statement: ID EQUALS expression SEMICOLON .

    $default  reduce using rule 14 (statement)


state 65

   32 expression: LPAR expression RPAR .

    $default  reduce using rule 32 (expression)


state 66

   27 expression: expression . PLUSOP expression
   27           | expression PLUSOP expression .
   28           | expression . MINUSOP expression
   29           | expression . TIMES expression
   30           | expression . DIV expression

    TIMES  shift, and go to state 56
    DIV    shift, and go to state 57

    $default  reduce using rule 27 (expression)


state 67

   27 expression: expression . PLUSOP expression
   28           | expression . MINUSOP expression
   28           | expression MINUSOP expression .
   29           | expression . TIMES expression
   30           | expression . DIV expression

    TIMES  shift, and go to state 56
    DIV    shift, and go to state 57

    $default  reduce using rule 28 (expression)


state 68

   27 expression: expression . PLUSOP expression
   28           | expression . MINUSOP expression
   29           | expression . TIMES expression
   29           | expression TIMES expression .
   30           | expression . DIV expression

    $default  reduce using rule 29 (expression)


state 69

   27 expression: expression . PLUSOP expression
   28           | expression . MINUSOP expression
   29           | expression . TIMES expression
   30           | expression . DIV expression
   30           | expression DIV expression .

    $default  reduce using rule 30 (expression)


state 70

   16 statement: IF LPAR expression RPAR statement . ELSE statement
   17          | IF LPAR expression RPAR statement .

    ELSE  shift, and go to state 76

    ELSE      [reduce using rule 17 (statement)]
    $default  reduce using rule 17 (statement)


state 71

   18 statement: WHILE LPAR expression RPAR statement .

    $default  reduce using rule 18 (statement)


state 72

   22 print_list: print_list COMMA print_item .

    $default  reduce using rule 22 (print_list)


state 73

   19 statement: PRINT LPAR print_list RPAR SEMICOLON .

    $default  reduce using rule 19 (statement)


state 74

   26 read_list: read_list COMMA ID .

    $default  reduce using rule 26 (read_list)


state 75

   20 statement: READ LPAR read_list RPAR SEMICOLON .

    $default  reduce using rule 20 (statement)


state 76

   16 statement: IF LPAR expression RPAR statement ELSE . statement

    IF     shift, and go to state 14
    WHILE  shift, and go to state 15
    PRINT  shift, and go to state 16
    READ   shift, and go to state 17
    LKEY   shift, and go to state 18
    ID     shift, and go to state 20

    statement  go to state 77


state 77

   16 statement: IF LPAR expression RPAR statement ELSE statement .

    $default  reduce using rule 16 (statement)
